omnitron-rpc/tests/compile_fail/tarpc_service_fn_new.rs
#[omnitron_rpc::service]
trait World {
    async fn new();
}

fn main() {}
