omnitron-rpc/tests/compile_fail/tarpc_service_fn_new.stderr
error: method name conflicts with generated fn `WorldClient::new`
 --> $DIR/omnitron_rpc_service_fn_new.rs:3:14
  |
3 |     async fn new();
  |              ^^^
